# multi-dwarf

./: .gitignore  CMakeLists.txt  NOTICE  README.md  dfcapture.lua  dfcapture_public.lua
.github/: FUNDING.yml
scripts/gui/: dfcapture.lua
src/: building_zone.cpp  building_zone.h  camera.h  client_state.cpp  client_state.h  dfcapture.cpp  diagnostics.cpp  diagnostics.h  frame.h  http_server.cpp  http_server.h  hud.cpp  hud.h  image_encoder.cpp  image_encoder.h  info_panel.cpp  info_panel.h  interaction.cpp  interaction.h  json_util.cpp  json_util.h  labor.cpp  labor.h  lua_bridge.cpp  lua_bridge.h  notifications.cpp  notifications.h  overlay_control.cpp  overlay_control.h  placement.cpp  placement.h  sdl_capture.cpp  sdl_capture.h  stockpile_panel.cpp  stockpile_panel.h  unit_portrait.cpp  unit_portrait.h  unit_sheet.cpp  unit_sheet.h  web_assets.cpp  (+3 more)
web/: index.html
web/css/: dfcapture.css
web/js/: dfcapture-build-info-panels.js  dfcapture-building-zone-stockpile-panels.js  dfcapture-controls-placement.js  dfcapture-core.js  dfcapture-labor-work-orders.js  dfcapture-unit-hud-notifications.js
